src/objects/Transaction_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Sconto_CAD__c</fullName>
        <formula>if ( 
Or (Prezzo_di_listino_CAD__c   - Prezzo_di_vendita_CAD__c  =0, (And (Prezzo_di_listino_CAD__c   &lt; Prezzo_di_vendita_CAD__c  , Prezzo_di_listino_CAD__c  &gt;0  )),
(And (Prezzo_di_listino_CAD__c   &gt; Prezzo_di_vendita_CAD__c  , Prezzo_di_listino_CAD__c  &lt;0  ))
), 
0 , 
Prezzo_di_listino_CAD__c   - Prezzo_di_vendita_CAD__c   
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto (CAD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_CHF__c</fullName>
        <formula>if ( 
Or (Prezzo_di_listino_CHF__c  - Prezzo_di_vendita_CHF__c =0, (And (Prezzo_di_listino_CHF__c  &lt; Prezzo_di_vendita_CHF__c , Prezzo_di_listino_CHF__c &gt;0  )),
(And (Prezzo_di_listino_CHF__c  &gt; Prezzo_di_vendita_CHF__c , Prezzo_di_listino_CHF__c &lt;0  ))
), 
0 , 
Prezzo_di_listino_CHF__c  - Prezzo_di_vendita_CHF__c  
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto (CHF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_CNY__c</fullName>
        <formula>if ( 
Or (Prezzo_di_listino_CNY__c   - Prezzo_di_vendita_CNY__c  =0, (And (Prezzo_di_listino_CNY__c   &lt; Prezzo_di_vendita_CNY__c  , Prezzo_di_listino_CNY__c  &gt;0  )),
(And (Prezzo_di_listino_CNY__c   &gt; Prezzo_di_vendita_CNY__c  , Prezzo_di_listino_CNY__c  &lt;0  ))
), 
0 , 
Prezzo_di_listino_CNY__c   - Prezzo_di_vendita_CNY__c   
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto (CNY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_DKK__c</fullName>
        <label>Sconto (DKK)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_EUR__c</fullName>
        <formula>if ( 
Or (Prezzo_di_Listino_EUR__c   - Prezzo_di_Vendita_EUR__c  =0, (And (Prezzo_di_Listino_EUR__c   &lt; Prezzo_di_Vendita_EUR__c  , Prezzo_di_Listino_EUR__c  &gt;0  )),
(And (Prezzo_di_Listino_EUR__c   &gt; Prezzo_di_Vendita_EUR__c  , Prezzo_di_Listino_EUR__c  &lt;0  ))
), 
0 , 
Prezzo_di_Listino_EUR__c   - Prezzo_di_Vendita_EUR__c   
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto (EUR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_GBP__c</fullName>
        <formula>if ( 
Or (Prezzo_di_listino_GBP__c   - Prezzo_di_vendita_GBP__c  =0, (And (Prezzo_di_listino_GBP__c   &lt; Prezzo_di_vendita_GBP__c  , Prezzo_di_listino_GBP__c  &gt;0  )),
(And (Prezzo_di_listino_GBP__c   &gt; Prezzo_di_vendita_GBP__c  , Prezzo_di_listino_GBP__c  &lt;0  ))
), 
0 , 
Prezzo_di_listino_GBP__c   - Prezzo_di_vendita_GBP__c   
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto (GBP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_HKD__c</fullName>
        <formula>if ( 
Or (Prezzo_di_listino_HKD__c   - Prezzo_di_vendita_HKD__c  =0, (And (Prezzo_di_listino_HKD__c   &lt; Prezzo_di_vendita_HKD__c  , Prezzo_di_listino_HKD__c  &gt;0  )),
(And (Prezzo_di_listino_HKD__c   &gt; Prezzo_di_vendita_HKD__c  , Prezzo_di_listino_HKD__c  &lt;0  ))
), 
0 , 
Prezzo_di_listino_HKD__c   - Prezzo_di_vendita_HKD__c   
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto (HKD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_JPY__c</fullName>
        <formula>if ( 
Or (Prezzo_di_listino_JPY__c   - Prezzo_di_vendita_JPY__c  =0, (And (Prezzo_di_listino_JPY__c   &lt; Prezzo_di_vendita_JPY__c  , Prezzo_di_listino_JPY__c  &gt;0  )),
(And (Prezzo_di_listino_JPY__c   &gt; Prezzo_di_vendita_JPY__c  , Prezzo_di_listino_JPY__c  &lt;0  ))
), 
0 , 
Prezzo_di_listino_JPY__c   - Prezzo_di_vendita_JPY__c   
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto (JPY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_KRW__c</fullName>
        <label>Sconto (KRW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_MOP__c</fullName>
        <label>Sconto (MOP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_PLN__c</fullName>
        <label>Sconto (PLN)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_QAR__c</fullName>
        <label>Sconto (QAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_RUB__c</fullName>
        <label>Sconto (RUB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_SAR__c</fullName>
        <label>Sconto (SAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_SGD__c</fullName>
        <label>Sconto (SGD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_USD__c</fullName>
        <formula>if ( 
Or (Prezzo_di_listino_USD__c   - Prezzo_di_vendita_USD__c  =0, (And (Prezzo_di_listino_USD__c   &lt; Prezzo_di_vendita_USD__c  , Prezzo_di_listino_USD__c  &gt;0  )),
(And (Prezzo_di_listino_USD__c   &gt; Prezzo_di_vendita_USD__c  , Prezzo_di_listino_USD__c  &lt;0  ))
), 
0 , 
Prezzo_di_listino_USD__c   - Prezzo_di_vendita_USD__c   
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sconto (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sconto_formula__c</fullName>
        <formula>CASE($User.CurrencyISOcode__c, 
&quot;BRL&quot;, PSconto_BRL__c, 
&quot;CAD&quot;, Pdi_Sconto_CAD__c, 
&quot;CHF&quot;, PSconto_CHF__c, 
&quot;CNY&quot;, PSconto_CNY__c, 
&quot;EUR&quot;, PSconto_EUR__c, 
&quot;GBP&quot;, PSconto_GBP__c, 
&quot;HKD&quot;, PSconto_HKD__c, 
&quot;JPY&quot;, PSconto_JPY__c, 
&quot;USD&quot;, PSconto_USD__c, 
&quot;MOP&quot;, PSconto_MOP__c,
&quot;AUD&quot;, PSconto_AUD__c,
&quot;DKK&quot;, PSconto_DKK__c,
&quot;RUB&quot;, PSconto_RUB__c,
&quot;KRW&quot;, PSconto_KRW__c,
&quot;AED&quot;, PSconto_AED__c,
&quot;PLN&quot;, PSconto_PLN__c,
&quot;QAR&quot;, PSconto_QAR__c,
&quot;SGD&quot;, PSconto_SGD__c,
&quot;SAR&quot;, PSconto_SAR__c,
PSconto__c)</formula>
        <label>% Sconto (formula)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated al quale è stata associata la vendita</description>
        <label>Seller</label>
        <referenceTo>Associated__c</referenceTo>
        <relationshipLabel>Dettagli Transazione</relationshipLabel>
        <relationshipName>Dettagli_Transazione</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stagione_Prodotto__c</fullName>
        <formula>Product__r.Stagione__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stagione</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stato_Reso_Cambio_Ecommerce__c</fullName>
        <label>Stato Reso Cambio/Ecommerce</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CREATED</fullName>
                </value>
                <value>
                    <fullName>WORK_IN_PROGRESS</fullName>
                </value>
                <value>
                    <fullName>ACCEPTED</fullName>
                </value>
                <value>
                    <fullName>REFUSED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tasso_di_Cambio__c</fullName>
        <label>Tasso di Cambio</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tasso_di_cambio_CHF__c</fullName>
        <label>Tasso di cambio (CHF)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tasso_di_cambio_CNY__c</fullName>
        <label>Tasso di cambio (CNY)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tasso_di_cambio_GBP__c</fullName>
        <label>Tasso di cambio (GBP)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tasso_di_cambio_HKD__c</fullName>
        <label>Tasso di cambio (HKD)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tasso_di_cambio_JPY__c</fullName>
        <label>Tasso di cambio (JPY)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tasso_di_cambio_USD__c</fullName>
        <label>Tasso di cambio (USD)</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Ordine_KPI__c</fullName>
        <formula>IF( 

(OR ( text(Transaction__r.Stato_ordine_Ecommerce__c)= &quot;CANCELLED&quot;,text( Transaction__r.Stato_ordine_Ecommerce__c)= &quot;REFUSED&quot;)),

 &quot;&quot; , text(Transaction__r.Tipo_Ordine__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo Ordine KPI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Store__c</fullName>
        <formula>Transaction__r.Tipo_Store__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo Store</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_Vendita__c</fullName>
        <label>Tipo Vendita</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>R</fullName>
                </value>
                <value>
                    <fullName>E</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_filato_AS400__c</fullName>
        <formula>Product__r.Tipo_filato__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo filato AS400</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipologia_di_Sconto__c</fullName>
        <label>Tipologia di Sconto</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SALDI</fullName>
                </value>
                <value>
                    <fullName>SALDI PRIVATI</fullName>
                </value>
                <value>
                    <fullName>DIPENDENTI</fullName>
                </value>
                <value>
                    <fullName>VIP</fullName>
                </value>
                <value>
                    <fullName>ARROTONDAMENTI</fullName>
                </value>
                <value>
                    <fullName>OMAGGIO</fullName>
                </value>
                <value>
                    <fullName>DIPENDENTE AEROPORTO</fullName>
                </value>
                <value>
                    <fullName>CLIENTI ABITUALI</fullName>
                </value>
                <value>
                    <fullName>EMPLOYEE</fullName>
                </value>
                <value>
                    <fullName>TRANSACTION DISCOUNT - PCT</fullName>
                </value>
                <value>
                    <fullName>FRIEND &amp; FAMILY</fullName>
                </value>
                <value>
                    <fullName>EMPLOYEE DISCOUNT - 50 PCT</fullName>
                </value>
                <value>
                    <fullName>TRANSACTION DISCOUNT - AMT</fullName>
                </value>
                <value>
                    <fullName>JOURNALIST</fullName>
                </value>
                <value>
                    <fullName>PRIVATE SALE</fullName>
                </value>
                <value>
                    <fullName>SPECIAL CUSTOMER</fullName>
                </value>
                <value>
                    <fullName>EMPLOYEE DISCOUNT - 30 PCT</fullName>
                </value>
                <value>
                    <fullName>ROUNDING AMOUNT</fullName>
                </value>
                <value>
                    <fullName>EMPLOYEE DISCOUNT - 20PCT</fullName>
                </value>
                <value>
                    <fullName>SALE</fullName>
                </value>
                <value>
                    <fullName>DISCOUNT</fullName>
                </value>
                <value>
                    <fullName>EMPLOYEE DISCOUNT - 40 PCT</fullName>
                </value>
                <value>
                    <fullName>ROUNDING %</fullName>
                </value>
                <value>
                    <fullName>LINEITEM - PCT</fullName>
                </value>
                <value>
                    <fullName>EMPLOYEE DISCOUNT - PROMPT FOR</fullName>
                </value>
                <value>
                    <fullName>LINEITEM - AMT</fullName>
                </value>
                <value>
                    <fullName>LINE_ITEM_DISCOUNT</fullName>
                </value>
                <value>
                    <fullName>DEAL</fullName>
                </value>
                <value>
                    <fullName>COUPON</fullName>
                </value>
                <value>
                    <fullName>POINT USAGE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Titolare_Boutique__c</fullName>
        <formula>IF (AND( 
$User.ProfileId = $Setup.Profile__c.Id_Boutique__c, 
!ISNULL(Transaction__c),!ISNULL(Transaction__r.Id_Location_Micros__c), 
Transaction__r.Id_Location_Micros__c =  $User.Codice_Boutique__c ), 
true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Titolare Boutique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Titolare_Client_Advisor__c</fullName>
        <formula>IF (AND( 
OR($User.ProfileId = $Setup.Profile__c.Id_Associate__c,$User.ProfileId = $Setup.Profile__c.Id_Boutique__c), 
!ISNULL(Codice_Seller__c), !ISBLANK(Codice_Seller__c), Codice_Seller__c &lt;&gt; &apos;&apos;,
Codice_Seller__c = $User.Codice_Associate__c), 
true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Titolare Client Advisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Titolare_per_report__c</fullName>
        <formula>IF($User.Codice_Boutique__c = Id_Location_Micros__c,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Titolare per report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Today_Last_Year__c</fullName>
        <formula>IF ( AND
(DAY(DATEVALUE(Data_Scontrino__c)) = DAY(TODAY()),
 MONTH(DATEVALUE(Data_Scontrino__c)) = MONTH(TODAY()),
 YEAR(DATEVALUE(Data_Scontrino__c))= (YEAR(TODAY())-1)
 ), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Today (Last Year)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction__c</fullName>
        <label>Transazione</label>
        <referenceTo>Transaction__c</referenceTo>
        <relationshipLabel>Dettagli Transazione</relationshipLabel>
        <relationshipName>Transaction_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Valuta_store__c</fullName>
        <formula>$User.CurrencyISOcode__c</formula>
        <label>Valuta store</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>check_upload_image__c</fullName>
        <defaultValue>false</defaultValue>
        <label>check upload image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>checkbox_temp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>checkbox temp</label>
        <type>Checkbox</type>
    </fields>
    <label>Dettaglio Transazione</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Numero Dettaglio Transazione</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dettagli Transazione</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>